--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
     "express-list-routes": "^1.3.1",
     "express-session": "^1.18.2",
+    "fs": "^0.0.1-security",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.16.5",
@@ -31,6 +33,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "pdfkit": "^0.17.1",
+    "razorpay": "^2.9.6"
   }
 }
